# Liminal

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pytest_learning_events_output.txt  ADVANCED_RISK_ANALYSIS_2025.md  AI_ETHICS_2025.md  ARCHITECTURE_MAP.md  BACKLOG.md  BLUE_AUDIT_REPORT.md  BURNOUT_GUARD_MVP_REPORT.md  COMMUNITY_ROADMAP.md  CONTRIBUTING.md  COPYRIGHT  DEPLOYMENT_GUIDE.md  DEVOPS_COMPATIBILITY_ANALYSIS_2025.md  ECOSYSTEM.md  LICENSE  LIMINAL_FUTURE_VISION_2030.md  Liminal_readme.md  MONETIZATION_STRATEGY_2025.md  Makefile  PRODUCT_ECOSYSTEM_VISION.md  PROJECT_BACKLOG_2025.md  PROJECT_VALUATION_2025.md  QUANTUM_STRING_THEORY_ANALYSIS_2025.md  README.md  README_SOMA.md  RESONANCE_LIMINAL_FAV_2025.fav  SECURITY_AUDIT_REPORT.md  SPRINT_3_PLAN.md  SPRINT_4_PLAN.md  STATUS.md  STRATEGIC_ROADMAP_2025.md  STRATEGIC_ROADMAP_2025_RU.md  TEST_RESULTS.md  _config.yml  adapter_check_results.txt  api.py  (+65 more)
.claude/: settings.local.json
.cpcache/: 1765115362.cp
.zap/: rules.tsv
OneBloodEmpathyTraining/: OneBloodEmpathyTraining.cabal  README.md  README_RU.md
OneBloodEmpathyTraining/src/: OneBloodEmpathyTraining.hs
OneBloodEmpathyTraining/test/: Spec.hs
PLF_LAUNCH_STRATEGY/: AI_FEEDBACK_TEAM.md  AI_TEAM.md  BACKLOG.md  INVESTMENT_VS_PLF.md  README.md
auth/: __init__.py  dependencies.py  jwt_utils.py
backend/: .dockerignore  ARCHITECTURE_ANALYSIS_MIT.md  DEVELOPMENT_GUIDE_VLSU.md  Dockerfile  Dockerfile.basic  Dockerfile.cached  Dockerfile.fix  Dockerfile.mit  Dockerfile.ml  Dockerfile.ml.minimal  Dockerfile.ml.opt  Dockerfile.ml.prod  Dockerfile.optimized  Dockerfile.simple  ENHANCEMENT_HYPOTHESES.md  INTEGRATION_TEST_REPORT.md  PERFORMANCE_OPTIMIZATION_PLAN.md  __init__.py  api.py  app_logging.py  asyncpg.py  burnout_guard_test_results.json  check_redis.py  config.py  conftest.py  consciousness_neo4j.py  consciousness_schema.py  database_adapter.py  database_api.py  database_optimization.py  datomic_client.py  debug_test.py  debug_ws_info.txt  demo_brain_compass.py  demo_neural_journey.py  diagnostic_neo4j_docker.py  docker-compose.yml  file_output_philosophy.py  health.py  home_state_api.py  (+86 more)
book/: 1.txt  CONTENT_ROADMAP_2025.md  STORYTELLING_STRATEGY_2025.md  one.txt  part1.txt
config/: deployment.env.template
data/: insights.jsonl
diagnostic_rich_stub/: __init__.py  console.py  panel.py  table.py
docs/: API.md  DEVELOPER_QUICKSTART.md  DOCKER-OPTIMIZATION.md  GLOSSARY.md  LOAD_TESTING.md  PRIVATE_README_LOCAL.md  PersonalityAdapter.md  README.md  REDIS_CHANNELS.md  REINCE.md  SECURITY.md  SEED_DOCUMENT_LIMINAL.md  SNOWDEN-TESTIMONIAL.md  SOMA_API_Reference.md  SOMA_Documentation.md  TESTING-REPORT.md  TESTING.md  VULNERA_TECH_SPEC.md  XAI-OPENAI-INTEGRATION.md  api.md  autonomous_agents_workflows.md  backlog.md  deployment.md  index.md  ml_infrastructure.md
elk/: docker-compose.elk.yml
emotime/: __init__.py  api.py
fixtures/: aetherproof-agent-chain-context-replay-v0.1.json  claude-code-lifecycle-hooks-conformance-v0.1.json  codex-operational-continuity-conformance-v0.1.json  defer-continuation-conformance-v0.1.json  llm-dark-patterns-text-heuristic-v0.1.json  trustworthy-transition-durability-assurance-v0.3.json  trustworthy-transition-ecosystem-compatibility-v0.1.json  trustworthy-transition-full-lifecycle-compatibility-v0.2.json  trustworthy-transition-three-record-conformance-v0.1.json
frontend/: consciousness_monitor.html  consciousness_visualizer.html
go_ws_relay/: README.md  auto_restart.ps1  go.mod  go.sum  main.go  neo4j_api.go  test_client.html
infrastructure/: main.tf  otel-collector-config.yml
k8s/: production-deployment.yaml
liminal-datomic/: core.clj  deps.edn  dev.clj
liminal-prototype/: liminal.py
load_test/: .dockerignore  Dockerfile  PERFORMANCE_TESTING.md  README.md  locustfile.py  performance_config.yaml  requirements.txt  run_load_test.py  run_performance_analysis.py  run_test_suite.py
metrics/: __init__.py
mobile/: App.js  package.json  test_mobile_structure.js
philosophy/: pure_path.yaml
playwright-report/: index.html
prometheus/: prometheus.yml
redis/: send_pulse.py
registries/: agent-chain-purpose-v0.1.json
releases/: trustworthy-transition-release-candidate-v0.3.json
reports/: tests.xml
rich/: __init__.py  console.py  panel.py  table.py
rinse/: stack.yaml
schemas/: agent-chain-context-v0.1.schema.json  claude-code-lifecycle-hook-event-v0.1.schema.json  codex-operational-checkpoint-v0.1.schema.json
scripts/: SOMA.py  SOMA_awakening.md  SOMA_family_life.md  SOMA_integrated.py  SOMA_state.json  at_risk_offline_server.py  (+108 more)
tools/flake8_shim/: README.md  pyproject.toml  setup.cfg
tools/flake8_shim/flake8_shim/: __init__.py
tools/flake8_shim/src/flake8_shim/: __init__.py  cli.py
tools/pre_commit_shim/: README.md  setup.cfg
tools/pre_commit_shim/src/pre_commit/: __init__.py  cli.py
(+736 files in other folders)
