[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "liminal"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = ["strawberry.ext.mypy_plugin"]
exclude = ["/backend/"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.mypy."scripts.*"]
ignore_errors = true
