[tool.poetry]
name = "liminal"
version = "0.1.0"
description = "Resonance Liminal - System Organic Mind Awakening"
authors = ["Liminal Team"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
uvicorn = "^0.23.0"
python-dotenv = "^1.0.0"
neo4j = ">=4.4.2,<5.0.0"
redis = "^5.0.0"
prometheus-client = "^0.17.1"
websockets = "^11.0.3"
pydantic = "^2.3.0"
aiohttp = "^3.8.5"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-instrumentation-fastapi = "^0.41b0"
opentelemetry-instrumentation-neo4j = "^0.41b0"
opentelemetry-instrumentation-redis = "^0.41b0"
opentelemetry-exporter-otlp = "^1.20.0"
hvac = "^1.1.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
