[metadata]
name = flake8-shim
version = 0.1.0
description = Offline-friendly lint shim providing a minimal flake8 CLI
long_description = file: README.md
long_description_content_type = text/markdown
author = Liminal Maintainers
license = MIT

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flake8 = flake8_shim.cli:main
