[metadata]
name = pre-commit-shim
version = 0.1.0
description = Offline-friendly shim providing a no-op pre-commit CLI
long_description = file: README.md
long_description_content_type = text/markdown
author = Liminal Maintainers
license = MIT

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pre-commit = pre_commit.cli:main
